--- a/package.json
+++ b/package.json
@@ -9,17 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.23.3",
+    "@clerk/themes": "^1.7.5",
+    "@t3-oss/env-nextjs": "^0.6.1",
     "@types/node": "20.5.8",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@types/web-push": "^3.6.0",
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "eslint-config-prettier": "^9.0.0",
+    "lucide-react": "^0.274.0",
     "next": "13.4.19",
     "postcss": "8.4.29",
+    "prettier": "2.8.8",
+    "prettier-plugin-tailwindcss": "0.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "stream-chat": "^8.11.0",
+    "stream-chat-react": "^10.9.1",
+    "svix": "^1.10.0",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "web-push": "^3.6.5",
+    "zod": "^3.22.2"
   }
 }
